@@ -12,56 +12,54 @@ plan skip_all => 'TEST_LIVE=1' unless $ENV{TEST_LIVE};
 my $app    = curfile->dirname->child('myapp.pl');
 my $listen = Mojo::URL->new(sprintf 'http://127.0.0.1:%s', Mojo::IOLoop::Server->generate_port);
 
-subtest reload => sub {
-  my $dctl = Mojo::Server::DaemonControl->new;
-  is int($dctl->reload($app)), 3, 'not running';
-};
+pipe my $UA_READ, my $UA_WRITE or die $!;
+$UA_READ->blocking(0);
 
 subtest 'hot deploy workers' => sub {
   my $dctl = Mojo::Server::DaemonControl->new(
     graceful_timeout   => 2,
-    heartbeat_interval => 0.5,
+    heartbeat_interval => 0.3,
     heartbeat_timeout  => 1,
     listen             => [$listen],
     workers            => 2,
   );
 
-  my ($reloaded, $running, %workers) = (0);
+  my ($ua_result,  %workers)       = ('');
+  my ($n_requests, $request_limit) = (0, 20);
   $dctl->on(
     heartbeat => sub {
       my ($dctl, $w) = @_;
       $workers{$w->{pid}} = $w;
 
-      # Cannot have two running managers
-      $running //= $dctl->run($app);
+      # Check tha we don't miss out on any requests
+      sysread $UA_READ, my $ua_chunk, 1024, 0;
+      $ua_result .= $ua_chunk     if $ua_chunk;
+      run_request_in_fork('/pid') if $n_requests++ < $request_limit;
+      run_request_in_fork('/pid') if $n_requests++ < $request_limit;
 
-      # Only do this once
-      state $ua_pid = run_slow_request_in_fork();
-
-      # Do not stop the server before the forced worker is actually stopped
-      $dctl->stop if grep { $_->{KILL} and !kill 0, $_->{pid} } values %workers;
+      # Reload the application - Only do this once
+      state $reloaded = 0;
+      Mojo::Server::DaemonControl->new->reload($app) if $w->{time} && ++$reloaded == 3;
+      $dctl->stop                                    if split("\n", $ua_result) >= $request_limit;
     }
   );
 
-  $dctl->on(reap => sub { $workers{$_[1]->{pid}}{reaped} = time });
-
-  is int($dctl->run($app)), 0,  'run';
-  is int($running),         16, 'already running';
-  is int(values %workers),  4,  'started';
-  my ($forced) = grep { $_->{KILL} } values %workers;
-  my ($normal) = grep { $_->{QUIT} and !$_->{KILL} } values %workers;
-  is $normal->{graceful}, $forced->{graceful}, 'stopped at the same time';
-  is $normal->{reaped} + 2, within($forced->{reaped}, 0.2), 'forced after graceful'
-    or diag Mojo::Util::dumper(\%workers);
-  is int(grep { $_->{TERM} } values %workers), 2, 'new workers';
+  is int($dctl->run($app)), 0, 'ran successfully';
+  is int(values %workers),  4, 'started n workers';
+  unlike $ua_result, qr{^/pid:0:}m,  'get /pid was all successful' or diag $ua_result;
+  like $ua_result,   qr{\bpid=$_\b}, "answer from worker $_" for sort keys %workers;
 };
 
 done_testing;
 
-sub run_slow_request_in_fork {
+sub run_request_in_fork {
+  my $path = shift;
   return if fork;
-  my $ua = Mojo::UserAgent->new;
-  $ua->ioloop->timer(0.1 => sub { Mojo::Server::DaemonControl->new->reload($app) });
-  $ua->get($listen->clone->path('/block'));
+
+  my $ua  = Mojo::UserAgent->new;
+  my $tx  = $ua->get($listen->clone->path($path));
+  my $err = $tx->error;
+  syswrite $UA_WRITE, sprintf "$path:%s:%s\n",
+    $err ? ($err->{code} // 0, $err->{message}) : ($tx->res->code, $tx->res->text);
   exit 0;
 }
